# LiDAR-Classification-Project

./: .gitignore  Dataset.py  README.md  Test.py  comparison.py  convert_to_pt.py  crossvalidationplots.ipynb  cv_predictions_detaillees.csv  feature_extraction.py  first_visu.ipynb  grid_search.py  knn_model.joblib  main.py  modele.ipynb  pointnet.sh  preprocess.sh  pyproject.toml  randomforest.ipynb  requirements.txt  splitter.py  test.py  test_predictions.csv  train.py  train_dataset_final.csv  val_dataset_final.csv
CrossVal/: CV_pipeline.py  CVutils.py
CrossVal/results/: cv_checkpoint_pointnet.pt  cv_metrics_summary.csv  cv_predictions.csv
CrossValidation/: CI.py  kfoldvalpipeline.py
DINO/: .gitignore  classes_arbres.txt  dev_geometry_features.npz  labels.csv
DINO/kfold/: cv_predictions_detaillees_GEO.csv  dino_cv_checkpoint.pt  dino_cv_checkpoint_GEO.pt  kfold.py  kfoldutils.py
DINO/predictions/: predictions_soumission.csv
GBM_experience/: GBM.py  feat_ext_PN.py
MachineLearning/: feature_extraction.py
PointNet/: .gitignore  final_predictions.csv  preprocess.sh  pyproject.toml
PointNet/CrossValidation/: CI.py  kfoldvalpipelinePN.py
PointNet/GBM_experience/: lgbm_sweep.py
PointNet/PointNetTraining/: Dataset.py  gridsearch.py  train.py
PointNetArch/: pointnet2_cls_msg.py
PointNetTraining/: gridsearch.py
Pointnet/: Dataset.py
data/: PCF.py  labels_split_complex.csv  labels_split_simple.csv  tableau_features.csv
data/__pycache__/: PCF._accumulate_hybrid-166.py313.1.nbc  PCF._accumulate_hybrid-166.py313.nbi
data/train_data/: labels.csv  train_dataset_final.csv  training_data_20k.csv  val_dataset_final.csv
experience/DINO/kfold/: kfold.py
experience/DINO/predictions/: infer.py
experience/DINO/training/: student.py  teacher_ext.py
experience/InformationTheory/: rf_info.ipynb  tableau_information_feat.csv
experience/PNTrain/: pointnet2_cls_msg.py  train.py
experience/PointNet/: gridsearch.py  train.py
experience/PointNet/GBM_PN_experience/: GBM.py  feat_ext_PN.py  lgbm_sweep.py
experience/ml/: MI.py  knn.ipynb  randomforest.ipynb  utils.py
experience/pcf/: compute_pcf_dataset.py  knn_pcf.py  knn_report.txt  visu_pcf.ipynb
models/: pointnet2_cls_msg.py
premier_modele/: randomtree.py
src/: feature_extraction.py
train_data/: labels.csv  val_dataset_final.csv
utils/: feature_extraction.py  generate_split.py  projection2D.py
