[project]
name = "pointnetlidar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "laspy>=2.7.0",
    "lazrs>=0.8.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-optim>=0.0.4",
    "torch-utils>=0.1.2",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
